--- a/package.json
+++ b/package.json
@@ -1,21 +1,39 @@
 {
-  "name": "chartjs-plugin-zoom",
+  "_from": "chartjs-plugin-zoom",
+  "_id": "chartjs-plugin-zoom@0.7.7",
+  "_inBundle": false,
+  "_integrity": "sha512-8fOHPPiZTT2+K0w278TQWYs/DtPg06s1OpTqdXxPpdfH7QQbl6Io/WuE1FjPehDWVCxpe3tSTts+dPbxgq2Z5g==",
+  "_location": "/chartjs-plugin-zoom",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "tag",
+    "registry": true,
+    "raw": "chartjs-plugin-zoom",
+    "name": "chartjs-plugin-zoom",
+    "escapedName": "chartjs-plugin-zoom",
+    "rawSpec": "",
+    "saveSpec": null,
+    "fetchSpec": "latest"
+  },
+  "_requiredBy": [
+    "#USER",
+    "/"
+  ],
+  "_resolved": "https://registry.npmjs.org/chartjs-plugin-zoom/-/chartjs-plugin-zoom-0.7.7.tgz",
+  "_shasum": "b25989bd6183cc51d5bb9293c20b4b7942555584",
+  "_spec": "chartjs-plugin-zoom",
+  "_where": "/Users/petrkoucky/git_projects/amicooking",
+  "bugs": {
+    "url": "https://github.com/chartjs/chartjs-plugin-zoom/issues"
+  },
+  "bundleDependencies": false,
+  "dependencies": {
+    "hammerjs": "^2.0.8"
+  },
+  "deprecated": false,
   "description": "Plugin that enables zoom and pan functionality in Chart.js charts.",
-  "version": "0.7.7",
-  "license": "MIT",
-  "jsdelivr": "dist/chartjs-plugin-zoom.min.js",
-  "unpkg": "dist/chartjs-plugin-zoom.min.js",
-  "main": "dist/chartjs-plugin-zoom.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/chartjs/chartjs-plugin-zoom.git"
-  },
-  "scripts": {
-    "build": "gulp build",
-    "test": "gulp test"
-  },
   "devDependencies": {
-    "chart.js": "^3.0.0-beta.7",
+    "chart.js": "^2.9.2",
     "coveralls": "^3.1.0",
     "eslint": "^5.12.1",
     "eslint-config-chartjs": "^0.1.0",
@@ -30,28 +48,36 @@
     "gulp-zip": "^5.0.1",
     "inquirer": "^7.1.0",
     "jasmine": "^3.5.0",
-    "karma": "^5.1.0",
+    "karma": "^5.0.4",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^2.0.2",
     "karma-firefox-launcher": "^1.3.0",
-    "karma-jasmine": "^3.3.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-jasmine": "^3.1.1",
+    "karma-jasmine-html-reporter": "^1.5.3",
     "karma-rollup-preprocessor": "^7.0.5",
     "karma-spec-reporter": "0.0.32",
     "merge-stream": "^2.0.0",
     "pixelmatch": "^5.2.0",
-    "rollup": "^2.15.0",
+    "rollup": "^2.8.2",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-istanbul": "^2.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^6.1.0",
+    "rollup-plugin-terser": "^5.3.0",
     "semver": "^7.3.2",
     "yargs": "^15.3.1"
   },
+  "homepage": "https://github.com/chartjs/chartjs-plugin-zoom#readme",
+  "jsdelivr": "dist/chartjs-plugin-zoom.min.js",
+  "license": "MIT",
+  "main": "dist/chartjs-plugin-zoom.js",
+  "name": "chartjs-plugin-zoom",
   "peerDependencies": {
-    "chart.js": "^3.0.0-beta.7"
+    "chart.js": "^2.6.0"
   },
-  "dependencies": {
-    "hammerjs": "^2.0.8"
-  }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chartjs/chartjs-plugin-zoom.git"
+  },
+  "unpkg": "dist/chartjs-plugin-zoom.min.js",
+  "version": "0.7.7"
 }
